# dflash-mlx

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmark/: adaptive_decode_controller.md  bench_agentic_trace.py  bench_target_fa_window.py  benchmark.py  compare_cache_only_prefill.py  compare_final_layer_last_token.py  compare_gdn_state_dtype.py  compare_hybrid_logits.py  compare_kv_cache_quality.py  compare_prefill_split_sdpa.py  extract_pi_session_prompt.py  probe_apple_prefill.py  probe_attention_linears.py  probe_disk_cache_writes.py  probe_gdn_bf16_qkvz_pack.py  probe_gdn_compile.py  probe_gdn_threadgroup.py  probe_mlp_combos.py  probe_mlp_streams.py  probe_mlp_tiled_down.py  profile_gdn_components.py  profile_qwen_prefill_layers.py  profile_variants.py  run_prefill_ab.py
benchmark/results/: adaptive-fallback-server-test.jsonl  (+279 more)
dflash_mlx/: __init__.py  adapter.py  draft_backend.py  engine.py  generate.py  kernels.py  model.py  prompt_disk_cache.py  recurrent_rollback_cache.py  runtime.py  serve.py  verify_backend.py  verify_linear.py  verify_qmm.py
docs/: BENCHMARKING.md  OBSERVABILITY.md  RUNTIME_FLAGS.md  prefill-performance-notes.md
eval/: eval_gsm8k.py
examples/: demo.py
tests/: test_acceptance_stats.py  test_adaptive_fallback.py  test_dflash_prompt_cache.py  test_draft_context_kv.py  test_engine_event_contract.py  test_engine_rollback.py  test_gdn_kernels.py  test_packed_mlp.py  test_prefix_cache_integration.py  test_sdpa_heuristic.py  test_server_request_loop.py  test_target_fa_window.py  test_verify_linear_parity.py  test_verify_qmm_parity.py
(+251 files in other folders)
